<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="unb.mdsgpp.qualcurso.MainActivity" >

    <item
        android:id="@+id/action_example"
        android:title="@string/action_example"
        app:showAsAction="never"/>
    <!-- app:showAsAction="withText|ifRoom" -->
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
	<item
    	android:id="@+id/action_about"
    	android:orderInCategory="2"
    	android:showAsAction="never"
    	android:title="@string/about"/>
	
	<item
    	android:id="@+id/action_exit"
    	android:orderInCategory="3"
    	android:showAsAction="never"
    	android:title="@string/exit"/>
</menu>
